--- a/css/style.css
+++ b/css/style.css
@@ -1,15 +1,12 @@
 @charset "UTF-8";
 
-/* --------------------------------
- * base
- * -------------------------------- */
 html {
   font-size: 62.5%;
 }
 body {
-  color: #333;
-  font-size: 1.2rem;
-  font-family: "Hiragino Kaku Gothic ProN",  Meiryo,  sans-serif;
+   color: #333;
+   font-size: 1.2rem;
+   font-family: Hiragino Kaku Gothic ProN, Meiryo, sans-serif;
 }
 *, *::before, *::after {
   box-sizing: border-box;
@@ -18,44 +15,41 @@ a:link, a:visited, a:hover, a:active {
   color: #d03c56;
   text-decoration: none;
 }
-
-
-/* --------------------------------
- * parts
- * -------------------------------- */
-.clearfix::after {
-  content: '';
-  display: block;
-  clear: both;
-}
-.heading {
-  padding: 10px 12px;
-  background: url('../images/bg-slash.gif');
-  letter-spacing: 1px;
-  font-size: 1.6rem;
-}
-.hidden {
-  display: none;
-}
-
-
-/* --------------------------------
- * header
- * -------------------------------- */
 .header {
   width: 100%;
   padding: 28px 0 10px;
   background: url('../images/bg-header.gif') repeat-x;
   box-shadow: 0 0 10px 1px #e3e3e3;
 }
+.wrapper {
+  width: 970px;
+  margin: 30px auto 40px; 
+}
+.main {
+  display: block;
+  float: left;
+  width: 660px;
+}
+.sidemenu {
+  float: right;
+  width: 275px;
+}
+.footer {
+  width: 100%; 
+}
+.clearfix::after {
+  content: '';
+  display: block;
+  clear: both;
+}
 .logo {
   width: 225px;
   height: 56px;
   margin: 0 auto;
   background: url('../images/logo.png') no-repeat;
+  overflow: hidden;
   text-indent: 100%;
   white-space: nowrap;
-  overflow: hidden;
 }
 .logo a {
   display: block;
@@ -87,24 +81,8 @@ a:link, a:visited, a:hover, a:active {
   background-color: #d03c56;
   color: #fff;
 }
-
-
-/* --------------------------------
- * wrapper
- * -------------------------------- */
-.wrapper {
-  width: 970px;
-  margin: 30px auto 40px;
-}
-
-
-/* --------------------------------
- * main
- * -------------------------------- */
-.main {
-  display: block;
-  float: left;
-  width: 660px;
+.hidden {
+  display: none;
 }
 .hot-topic {
   display: block;
@@ -153,6 +131,12 @@ a:link, a:visited, a:hover, a:active {
   font-size: 1.1rem;
   line-height: 1;
 }
+.heading {
+  padding: 10px 12px;
+  background: url('../images/bg-slash.gif');
+  letter-spacing: 1px;
+  font-size: 1.6rem;
+}
 .scroll-list {
   max-height: 220px;
   overflow-y: auto;
@@ -165,9 +149,6 @@ a:link, a:visited, a:hover, a:active {
   color: #333;
   font-size: 0;
   transition: background-color 0.1s;
-}
-.scroll-list .scroll-item:nth-of-type(even) a {
-  background: url('../images/bg-slash.gif');
 }
 .scroll-list .scroll-item a:hover {
   background-color: #fafaf8;
@@ -190,9 +171,6 @@ a:link, a:visited, a:hover, a:active {
   font-size: 1.0rem;
   line-height: 16px;
 }
-.scroll-list .category.news {
-  background-color: #2c3c53;
-}
 .scroll-list .title {
   display: inline-block;
   width: 73%;
@@ -201,6 +179,9 @@ a:link, a:visited, a:hover, a:active {
   text-overflow: ellipsis;
   white-space: nowrap;
   font-size: 1.2rem;
+}
+.scroll-list .category.news {
+  background-color: "2c3c53";
 }
 .article-box {
   position: relative;
@@ -215,7 +196,7 @@ a:link, a:visited, a:hover, a:active {
 .article-box:hover {
   opacity: 0.8;
 }
-.article-box:nth-of-type(odd) {
+.article-box:nth-last-of-type(odd) {
   float: left;
 }
 .article-box:nth-of-type(even) {
@@ -227,7 +208,7 @@ a:link, a:visited, a:hover, a:active {
   font-size: 1.4rem;
   line-height: 1.6;
 }
-.article-box .desc {
+.article-box desc {
   margin-top: 5px;
   color: #333;
   overflow: hidden;
@@ -254,216 +235,3 @@ a:link, a:visited, a:hover, a:active {
   left: 0;
   width: 100%;
 }
-
-
-/* --------------------------------
- * sidemenu
- * -------------------------------- */
-.sidemenu {
-  float: right;
-  width: 275px;
-}
-.ranking {
-  margin-bottom: 30px;
-  list-style-type: none;
-  counter-reset: ranking;
-}
-.ranking .ranking-item {
-  margin-top: 15px;
-}
-.ranking .ranking-item a {
-  display: block;
-  font-size: 0;
-  transition: opacity 0.15s;
-}
-.ranking .ranking-item a:hover {
-  opacity: 0.8;
-}
-.ranking .image {
-  width: 55px;
-  height: 55px;
-}
-.ranking .order {
-  display: inline-block;
-  width: 18px;
-  height: 18px;
-  margin: 0 10px;
-  border: 1px solid #ccc;
-  color: #aaa;
-  vertical-align: 20px;
-  text-align: center;
-  font-weight: bold;
-  line-height: 16px;
-  -webkit-transform: rotate(45deg);
-  -ms-transform: rotate(45deg);
-  transform: rotate(45deg);
-}
-.ranking .order::before {
-  content: counter(ranking);
-  display: inline-block;
-  counter-increment: ranking;
-  font-size: 1.0rem;
-  -webkit-transform: rotate(-45deg);
-  -ms-transform: rotate(-45deg);
-  transform: rotate(-45deg);
-}
-.ranking .ranking-item:nth-of-type(1) .order,
-.ranking .ranking-item:nth-of-type(2) .order,
-.ranking .ranking-item:nth-of-type(3) .order {
-  border: none;
-  color: #fff;
-  font-weight: normal;
-  line-height: 18px;
-}
-.ranking .ranking-item:nth-of-type(1) .order {
-  background-color: #dab413;
-}
-.ranking .ranking-item:nth-of-type(2) .order {
-  background-color: #6e7b84;
-}
-.ranking .ranking-item:nth-of-type(3) .order {
-  background-color: #a0541a;
-}
-.ranking .text {
-  display: inline-block;
-  width: 182px;
-  color: #000;
-  vertical-align: top;
-  font-size: 1.2rem;
-  line-height: 1.5;
-}
-.documents {
-  margin: 10px 10px 30px;
-}
-.documents,
-.documents ul {
-  list-style-type: none;
-}
-.documents > li .title {
-  margin: 15px 0;
-  padding-left: 8px;
-  border-left: 5px solid #d03c56;
-  font-size: 1.4rem;
-  line-height: 1.2;
-}
-.documents > li + li {
-  margin-top: 25px;
-}
-.documents > li ul {
-  margin: 15px;
-}
-.documents > li ul > li {
-  margin-bottom: 15px;
-  padding-left: 10px;
-  background: url('../images/arrow.gif') no-repeat left center;
-}
-.documents a:hover {
-  text-decoration: underline;
-}
-.search-box {
-  padding: 15px;
-  background-color: #ccc;
-  font-size: 0;
-}
-.search-box > * {
-  font-size: 1.2rem;
-}
-.search-box .search-input {
-  width: 205px;
-  height: 26px;
-  padding: 0 10px;
-  border: none;
-}
-.search-box .search-button {
-  width: 40px;
-  height: 26px;
-  border: none;
-  background-color: #d03c56;
-  color: #fff;
-  cursor: pointer;
-}
-.search-box .text {
-  margin-top: 12px;
-}
-
-
-/* --------------------------------
- * footer
- * -------------------------------- */
-.footer {
-  width: 100%;
-  padding: 20px 0 30px;
-  background: #2d3d54 url('../images/bg-footer.gif');
-  color: #fff;
-}
-.horizontal-list {
-  width: 970px;
-  margin: 0 auto;
-  text-align: right;
-  font-size: 0;
-}
-.horizontal-list .horizontal-item {
-  display: inline-block;
-  padding: 0 15px;
-  letter-spacing: 1px;
-}
-.horizontal-list .horizontal-item + .horizontal-item {
-  border-left: 1px solid #bbb;
-}
-.horizontal-list .horizontal-item a {
-  border-bottom: 1px dashed #777;
-  color: #bbb;
-  font-size: 1.1rem;
-  transition: color 0.15s;
-}
-.horizontal-list .horizontal-item a:hover {
-  color: #ddd;
-}
-.copyright {
-  margin-top: 30px;
-  text-align: center;
-  letter-spacing: 1px;
-}
-
-
-/* --------------------------------
- * challenge
- *
- * 288行目からの.ranking .order, .ranking .order::beforeの
- * スタイルをコメントアウトしてから適用してください。
- * -------------------------------- */
-/*
-.ranking .ranking-item {
-  position: relative;
-}
-.ranking .image {
-  margin-right: 20px;
-}
-.ranking .order {
-  position: absolute;
-  top: -9px;
-  left: 44px;
-  width: 20px;
-  height: 20px;
-  border: 1px solid #ccc;
-  border-radius: 50%;
-  background-color: #fff;
-  color: #aaa;
-  text-align: center;
-  font-weight: bold;
-  line-height: 18px;
-}
-.ranking .order::before {
-  content: counter(ranking);
-  counter-increment: ranking;
-  font-size: 1.0rem;
-}
-.ranking .ranking-item:nth-of-type(1) .order,
-.ranking .ranking-item:nth-of-type(2) .order,
-.ranking .ranking-item:nth-of-type(3) .order {
-  line-height: 20px;
-}
-.ranking .text {
-  width: 200px;
-}
-*/
