--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@ html {
 body {
    color: #333;
    font-size: 1.2rem;
-   font-family: Hiragino Kaku Gothic ProN, Meiryo, sans-serif;
+   font-family: "Hiragino Kaku Gothic ProN", Meiryo, sans-serif;
 }
 *, *::before, *::after {
   box-sizing: border-box;
@@ -131,24 +131,15 @@ a:link, a:visited, a:hover, a:active {
   font-size: 1.1rem;
   line-height: 1;
 }
-.heading {
-  padding: 10px 12px;
-  background: url('../images/bg-slash.gif');
-  letter-spacing: 1px;
-  font-size: 1.6rem;
-}
-.scroll-list {
-  max-height: 220px;
-  overflow-y: auto;
-  margin-bottom: 30px;
-  list-style-type: none;
-}
 .scroll-list .scroll-item a {
   display: block;
   padding: 10px 15px;
   color: #333;
   font-size: 0;
   transition: background-color 0.1s;
+}
+.scroll-list .scroll-item:nth-last-of-type(even) a {
+  background: url('../images/bg-slash.gif');
 }
 .scroll-list .scroll-item a:hover {
   background-color: #fafaf8;
@@ -196,7 +187,7 @@ a:link, a:visited, a:hover, a:active {
 .article-box:hover {
   opacity: 0.8;
 }
-.article-box:nth-last-of-type(odd) {
+.article-box:nth-of-type(odd) {
   float: left;
 }
 .article-box:nth-of-type(even) {
@@ -208,7 +199,7 @@ a:link, a:visited, a:hover, a:active {
   font-size: 1.4rem;
   line-height: 1.6;
 }
-.article-box desc {
+.article-box .desc {
   margin-top: 5px;
   color: #333;
   overflow: hidden;
@@ -270,7 +261,8 @@ a:link, a:visited, a:hover, a:active {
   margin: 0 10px;
   border: 1px solid #ccc;
   color: #aaa;
-  vertical-align: center;
+  vertical-align: 20px;
+  text-align: center;
   font-weight: bold;
   line-height: 16px;
   -webkit-transform: rotate(45deg);
@@ -319,6 +311,9 @@ a:link, a:visited, a:hover, a:active {
 }
 .documents > li + li {
   margin-top: 25px;
+}
+.documents >li ul {
+  margin: 15px;
 }
 .documents > li ul > li {
   margin-bottom: 15px;
