--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,8 @@
 @charset "UTF-8";
 
+/* --------------------------------
+ * base
+ * -------------------------------- */
 html {
   font-size: 62.5%;
 }
@@ -15,6 +18,30 @@ a:link, a:visited, a:hover, a:active {
   color: #d03c56;
   text-decoration: none;
 }
+
+
+/* --------------------------------
+ * parts
+ * -------------------------------- */
+.clearfix::after {
+  content: '';
+  display: block;
+  clear: both;
+}
+.heading {
+  padding: 10px 12px;
+  background: url('../images/bg-slash.gif');
+  letter-spacing: 1px;
+  font-size: 1.6rem;
+}
+.hidden {
+  display: none;
+} 
+
+
+/* --------------------------------
+ * header
+ * -------------------------------- */
 .header {
   width: 100%;
   padding: 28px 0 10px;
@@ -47,9 +74,9 @@ a:link, a:visited, a:hover, a:active {
   height: 56px;
   margin: 0 auto;
   background: url('../images/logo.png') no-repeat;
-  overflow: hidden;
   text-indent: 100%;
   white-space: nowrap;
+  overflow: hidden;
 }
 .logo a {
   display: block;
@@ -81,10 +108,26 @@ a:link, a:visited, a:hover, a:active {
   background-color: #d03c56;
   color: #fff;
 }
-.hidden {
-  display: none;
+
+
+/* --------------------------------
+ * wrapper
+ * -------------------------------- */
+.wrapper {
+  width: 970px;
+  margin: 30px auto 40px;
 }
-.hot-topic {
+
+
+/* --------------------------------
+ * main
+ * -------------------------------- */
+.main {
+  display: block;
+  float: left;
+  width: 660px;
+}
+ .hot-topic {
   display: block;
   height: 300px;
   margin-bottom: 30px;
@@ -131,6 +174,12 @@ a:link, a:visited, a:hover, a:active {
   font-size: 1.1rem;
   line-height: 1;
 }
+.scroll-list {
+  max-height: 220px;
+  overflow-y: auto;
+  margin-bottom: 30px;
+  list-style-type: none;
+}
 .scroll-list .scroll-item a {
   display: block;
   padding: 10px 15px;
@@ -162,6 +211,9 @@ a:link, a:visited, a:hover, a:active {
   font-size: 1.0rem;
   line-height: 16px;
 }
+.scroll-list .category.news {
+  background-color: "2c3c53";
+}
 .scroll-list .title {
   display: inline-block;
   width: 73%;
@@ -170,9 +222,6 @@ a:link, a:visited, a:hover, a:active {
   text-overflow: ellipsis;
   white-space: nowrap;
   font-size: 1.2rem;
-}
-.scroll-list .category.news {
-  background-color: "2c3c53";
 }
 .article-box {
   position: relative;
@@ -226,7 +275,16 @@ a:link, a:visited, a:hover, a:active {
   left: 0;
   width: 100%;
 }
-.ranking {
+
+
+/* --------------------------------
+ * sidemenu
+ * -------------------------------- */
+.sidemenu {
+  float: right;
+  width: 275px;
+}
+ .ranking {
   margin-bottom: 30px;
   list-style-type: none;
   counter-reset: ranking;
@@ -246,14 +304,6 @@ a:link, a:visited, a:hover, a:active {
   width: 55px;
   height: 55px;
 }
-.ranking .text {
-  display: inline-block;
-  width: 182px;
-  color: #000;
-  vertical-align: top;
-  font-size: 1.2rem;
-  line-height: 1.5;
-}
 .ranking .order {
   display: inline-block;
   width: 18px;
@@ -268,6 +318,15 @@ a:link, a:visited, a:hover, a:active {
   -webkit-transform: rotate(45deg);
   -ms-transform: rotate(45deg);
   transform: rotate(45deg);
+}
+.ranking .order::before {
+  content: counter(ranking);
+  counter-increment: ranking;
+  display: inline-block;
+  font-size: 1.0rem;
+  -webkit-transform: rotate(-45deg);
+  -ms-transform: rotate(-45deg);
+  transform: rotate(-45deg);
 }
 .ranking .ranking-item:nth-of-type(1) .order,
 .ranking .ranking-item:nth-of-type(2) .order,
@@ -286,14 +345,13 @@ a:link, a:visited, a:hover, a:active {
 .ranking .ranking-item:nth-of-type(3) .order {
   background-color: #a0541a;
 }
-.ranking .order::before {
-  content: counter(ranking);
-  counter-increment: ranking;
+.ranking .text {
   display: inline-block;
-  font-size: 1.0rem;
-  -webkit-transform: rotate(-45deg);
-  -ms-transform: rotate(-45deg);
-  transform: rotate(-45deg);
+  width: 182px;
+  color: #000;
+  vertical-align: top;
+  font-size: 1.2rem;
+  line-height: 1.5;
 }
 .documents {
   margin: 10px 10px 30px;
@@ -348,6 +406,11 @@ a:link, a:visited, a:hover, a:active {
 .search-box .text {
   margin-top: 12px;
 }
+
+
+/* --------------------------------
+ * footer
+ * -------------------------------- */
 .footer {
   width: 100%;
   padding: 20px 0 30px;
